# cqrs-es-example-rs

./: .buildinfo  .dockerignore  .gitignore  .tool-versions  AGENTS.md  AWS_SETUP.html  Cargo.toml  DEBUG_ON_DOCKER_COMPOSE.html  DEBUG_ON_LOCAL_MACHINE.html  DEPLOY_TO_EKS.html  DEPLOY_TO_LOCAL_K8S.html  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.ja.md  README.md  TOOLS_INSTALLATION.html  common.env  common.env.default  env.sh.default  genindex.html  index.html  objects.inv  renovate.json  search.html  searchindex.js  system-layout.puml
applications/read-api-server/: Cargo.toml  Dockerfile  README.md
applications/read-api-server/src/: lib.rs  main.rs
applications/read-model-updater/: Cargo.toml  Dockerfile  Dockerfile.local  README.md
applications/read-model-updater/fixtures/: example-dynamodb-event.json
applications/read-model-updater/src/: lib.rs  main.rs  thread_read_model_dao.rs
applications/write-api-server/: Cargo.toml  Dockerfile  README.md
applications/write-api-server/src/: lib.rs  main.rs
command/domain/: Cargo.toml
command/domain/src/: aggregate.rs  events.rs  group_chat.rs  lib.rs  thread.rs
command/domain/src/thread/: events.rs  member.rs
command/interface-adaptor/: Cargo.toml
command/interface-adaptor/src/: controllers.rs  gateway.rs  gateways.rs  lib.rs
command/interface-adaptor/src/gateway/: group_chat_repository.rs
command/interface-adaptor/src/gateways/: event_persistence_gateway.rs
command/interface-adaptor/tests/: command_processor.rs  common.rs  controllers.rs
command/processor/: Cargo.toml
command/processor/src/: command_processor.rs  lib.rs
command/write-api/: Cargo.toml  Dockerfile
command/write-api/src/: main.rs
modules/command/domain/: Cargo.toml  README.md
modules/command/domain/src/: aggregate.rs  group_chat.rs  group_chat_error.rs  lib.rs  thread.rs  user_account.rs  user_account_error.rs
modules/command/domain/src/group_chat/: events.rs  group_chat_id.rs  group_chat_name.rs  member.rs  member_id.rs  member_role.rs  (+4 more)
modules/command/interface-adaptor-if/: Cargo.toml  README.md
modules/command/interface-adaptor-if/src/: lib.rs
modules/command/interface-adaptor-impl/: Cargo.toml  README.md
modules/command/interface-adaptor-impl/.sqlx/: query-06b2fd551d4ee6b954ac9cdce41176e297602930532ac707303b7dcbbfaa2f41.json  query-2332b2212144546a7fd6359be162baa420e61932b41f6f779482e343b9509e80.json  query-254bfdc1990968a5118edc5bea9e3723547309df07d1b3582b47c206916db852.json  query-39f60a14ea24421093beeec181d3cd29a2de4bfa2d26baee6868285c2ceb0d90.json  query-486af224fe36b68e196d6db5619301afa381a468f389b53f77435f0a12f7818d.json  query-55ee2d313d11c5bec94174cb4ac5b50589442a6192a508fd349dfc995a44eb00.json  query-5b0201586365ed9ab3f321ee5aa5fece617b90895dee650d20ff27ada0b3d353.json  query-71b212bb8ddabcc8aaa5c3194208b6bacf46032a04c0423a17a3445a78393131.json  query-770c6f82609499359d3bca07a18b5e91da27850ea9815e2d7dbf8f46c95fa6c1.json  query-9ee0b8a547388fb5086dbd623dd22774d2dcee18b524b7dc319e2726e15c7574.json  query-9f15a6dbca6507664aee0c20be30b937a33e08aa3de45b886ff986add1f1adbd.json  query-b0bb2faad9ad66d97fa60f730388699e20059651b2645ede46e0b269a228b22f.json  query-c62befcd423e2ebf9b0ede04e0e5854f72914de8dfe9a93cdfcd84c3aeab1d2e.json  query-c7bad0977d4b23953fa8bcf48a289e2d0b5eac6cffd06f3cecc760fc984f2d04.json  query-de31cb10e714fe483a773e1d416bd215c6f8b58da89ae7b3052166ff0c2a6dfd.json  query-e4b9946f95cd68a33c1f459842fcbcd07f05f5119d0c26a2f4a3ee1d60e40cfb.json
modules/command/interface-adaptor-impl/src/: controllers.rs  gateways.rs  graphql.rs  lib.rs  resolvers.rs
modules/command/interface-adaptor-impl/tests/: README.md  command_processor.rs  common.rs  controllers.rs  gateways.rs
modules/command/processor/: Cargo.toml
modules/command/processor/src/: command_processor.rs  group_chat_command_processor.rs  lib.rs
modules/query/interface-adaptor/: Cargo.toml  Makefile.toml  sqlx-data.json
modules/query/interface-adaptor-impl/: Cargo.toml
modules/query/interface-adaptor-impl/src/: lib.rs
modules/query/interface-adaptor/.sqlx/: query-0a2dd717f11121fbf262b46ae53258c6803fe967506ef2d09aebed57c00e1719.json  query-0fc12e20f59efcba0a28b4c625a11739accafa39102743c7daf523d6f0af3775.json  query-1561758e2a84b68f37e327a960025b7f1c1741d5ae1f1940c6ff73306acacf06.json  query-191c8ec4279eceedd8baceed451867f7b53610df341b941c9bad71024949b102.json  query-1bec2c6cb6c3d9a73e9b51f396321db24dade639af1e0ab7c6b6f431929ed756.json  query-26f6ae27057d80ae648580888c6dba7567bf79845e2a5333dba91c1e3df7e249.json  query-35cc640cb595b1f708a4e6df6de15972af2fd935f9d906f51aeea098a116f62f.json  query-4cbf2eacecdb1eb2cbb97c512c042f0042c8d5eeb7226f501c7a62334a3a7918.json  query-64e4d398ee530869c95e4272475885db383ad5ec0e3d26e282549305eadd18d7.json  query-6ed5b909305c5a92113786f86a7df893ea42b796c96829c394f07ed796792e77.json  query-7f1c6266dc3db52acbb51f3b2ed316e032bf24d611a1ad5ed97a4615bc9b5a71.json  query-7fdaa7524ae57afa85f487f713619c3111e868b3df1341575b971cbc9a0f67a7.json  query-8ff64fec3e39f61bd8f22d51547634b4c8ebc0e485e0470ee68d75114b2ae2c2.json  query-9fd6b0ea58060f8c49240d9955f56af0a36758bfa80d53e63bb2356f5e521072.json  query-b20965f736b3571589ef748e9f59b738b82d8d3c1a27dac8779a5add0a38bde3.json  query-b7aa039c354c167cfb1b080104e4e5d2996f1e262e8cfa3cfbfd78ecaa0e48e6.json  query-b88c53274c31bd642be9929e74e8319ab069c3d2b4dfcc0b5b455e782df8bca3.json  query-bb97d66f4c7dca240e9a0f51ff675cc3b3f6cd5f20cd8ada93e6b6354895a4d7.json
modules/query/interface-adaptor/src/: controllers.rs  gateways.rs  lib.rs  resolvers.rs
modules/rmu/: Cargo.toml
modules/rmu/fixtures/: example-dynamodb-event.json
modules/rmu/src/: lib.rs
query/read-api/: Cargo.toml
query/read-api-server/: Cargo.toml
query/read-api-server/src/: lib.rs  main.rs
query/read-api/src/: main.rs
read-model-updater/: Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.local-rmu  sqlx-data.json
read-model-updater/src/: lib.rs  main.rs  thread_read_model_dao.rs
rmu/: Cargo.toml  Dockerfile  README.md
rmu/fixtures/: example-dynamodb-event.json
rmu/src/: lib.rs  main.rs
(+356 files in other folders)
