[workspace]
resolver = "2"

members = [
    "modules/infrastructure",
    "modules/command/domain",
    "modules/command/processor",
    "modules/command/interface-adaptor-if",
    "modules/command/interface-adaptor-impl",
    "modules/query/interface-adaptor",
    "applications/write-api-server",
    "applications/read-model-updater",
    "applications/read-api-server",
]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
async-trait = "0.1.74"
aws-config = "1.0.1"
aws_lambda_events = { vesrion = "0.10.0", default-features = false }
aws-sdk-dynamodb = "0.39.0"
aws-sdk-dynamodbstreams = "0.39.0"
backtrace = "0.3.69"
chrono = "0.4.*"
config = "0.13.4"
derive-new = "0.6.0"
downcast-rs = "1.2.0"
env_logger = "0.10.1"
itertools = "0.12.0"
lambda_runtime = "0.8.3"
log = "0.4.20"
num = "0.4.1"
once_cell = "1.18.0"
openssl = { version = "0.10.60", features = ["vendored"] }
redis = "0.23.4"
serde = "1.0"
serde_dynamo = "4.2.13"
serde_json = "1.0"
simple_logger = "4.3.0"
sqlx = { version = "0.7.3", default-features = false }

axum = "0.6.20"
http = "0.2.9"
hyper = "0.14.24"
tokio = "1"
tower = "0.4.13"
tower-http = "0.4"

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false }
ulid-generator-rs = "0.0.93"
event-store-adapter-rs = "0.2.29"

mime = "0.3.17"
refinery = { version = "0.8", features = ["mysql"] }
refinery-core = "0.8"
testcontainers = "0.15.0"