[workspace]
resolver = "2"

members = [
    "modules/infrastructure",
    "modules/command/domain",
    "modules/command/processor",
    "modules/command/interface-adaptor-if",
    "modules/command/interface-adaptor-impl",
    "modules/query/interface-adaptor",
    "modules/rmu",
    "applications/write-api-server",
    "applications/read-model-updater",
    "applications/read-api-server",
]

[workspace.dependencies]
anyhow = "1.0.82"
thiserror = "1.0.58"
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
async-trait = "0.1.79"
aws-config = "1.1.10"
aws_lambda_events = { vesrion = "0.10.0", default-features = false }
aws-sdk-dynamodb = "1.21.0"
aws-sdk-dynamodbstreams = "1.19.0"

backtrace = "0.3.70"
chrono = "0.4.*"
config = "0.14.0"
derive-new = "0.6.0"
downcast-rs = "1.2.1"
env_logger = "0.11.3"
itertools = "0.12.1"
lambda_runtime = "0.8.3"
log = "0.4.21"
num = "0.4.1"
once_cell = "1.19.0"
openssl = { version = "0.10.64", features = ["vendored"] }
redis = "0.25.3"
serde = "1.0"
serde_dynamo = "4.2.14"
serde_json = "1.0"
simple_logger = "4.3.3"
sqlx = { version = "0.7.4", default-features = false }

axum = "0.6.20"
http = "0.2.9"
hyper = "0.14.24"
tokio = "1"
tower = "0.4.13"
tower-http = "0.4"

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false }
ulid-generator-rs = "0.0.103"
event-store-adapter-rs = "1.1.20"

mime = "0.3.17"
refinery = { version = "0.8", features = ["mysql"] }
refinery-core = "0.8"
testcontainers = "0.15.0"
serial_test = "3.0.0"

opentelemetry = "0.22"
opentelemetry_sdk = "0.22"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
tracing-opentelemetry = "0.23"