[package]
name = "read-api-server"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
query-interface-adaptor = { path = "../../modules/query/interface-adaptor" }
downcast-rs = { workspace = true }
hyper = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "mysql", "chrono", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"] }

[[bin]]
name = "export-sdl"
path = "bin/export-sdl.rs"