[package]
name = "cqrs-es-example-read-model-updater"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "local"
path = "bin/local.rs"

[dependencies]
aws-config = "0.55.1"
aws-sdk-dynamodb = { version = "0.28.0" }
aws-sdk-dynamodbstreams = "0.28.0"
config = "0.13.1"

backtrace = "0.3.67"
simple_logger = "4.1.0"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.71"
chrono = { version = "0.4.*", features = ["serde"] }
downcast-rs = "1.2.0"
once_cell = "1.18.0"
async-trait = "0.1.71"
http = "0.2.4"

aws_lambda_events = { version = "0.10.0", default-features = false, features = ["dynamodb"] }
lambda_runtime = "0.8.1"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "json"] }

tokio = { version = "1", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "4.2.3"

cqrs-es-example-domain = { version = "0.0.1", path = "../../modules/command/domain" }
sqlx = { version = "0.6.3", default-features = false, features = ["offline", "macros", "mysql", "chrono", "runtime-tokio-rustls"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }

[dev-dependencies]
testcontainers = "0.14.0"
refinery-core = "0.8"
refinery = { version = "0.8", features = ["mysql"] }
mime = "0.3.16"
env_logger = "0.10.0"