[package]
name = "cqrs-es-example-write-api-server"
version = "0.0.1"
edition = "2021"

[dependencies]
envy = "0.4"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"

anyhow = "1.0.71"
chrono = "0.4.26"
downcast-rs = "1.2.0"
config = "0.13.1"

serde = { version = "1.0", features = ["derive"] }
aws-config = "0.55.1"
aws-sdk-dynamodb = { version = "0.28.0" }

axum = "0.6.18"


tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.12"

cqrs-es-example-domain = { version = "0.0.1", path = "../../modules/command/domain" }
cqrs-es-example-command-processor = { version = "0.0.1", path = "../../modules/command/processor" }
cqrs-es-example-command-interface-adaptor-impl = { version = "0.0.1", path = "../../modules/command/interface-adaptor-impl" }

openssl = { version = "0.10.55", features = ["vendored"] }
env_logger = "0.10.0"