[package]
name = "write-api-server"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
command-interface-adaptor-impl = { path = "../../modules/command/interface-adaptor-impl" }
command-processor = { path = "../../modules/command/processor" }
command-domain = { path = "../../modules/command/domain" }
downcast-rs = { workspace = true }
env_logger = { workspace = true }
hyper = { workspace = true,  features = ["full"] }
openssl = { workspace = true, features = ["vendored"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"] }
utoipa = { version = "3.5.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }
event-store-adapter-rs = "0.2.10"


[[bin]]
name = "export-openapi-yaml"
path = "bin/export-openapi-yaml.rs"