[package]
name = "palupunte-domain"
version = "0.0.1"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
anyhow = "1.0.71"
chrono = {  version = "0.4.26", features = ["serde"] }
downcast-rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid-generator-rs ={ version = "0.0.88", features = ["uuid", "serde"] }
