[package]
name = "palupunte-command-interface-adaptor"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.19"
anyhow = "1.0.71"
chrono = "0.4.26"
downcast-rs = "1.2.0"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55.3"
aws-sdk-dynamodb = { version = "0.28.0" }
tokio = { version = "1", features = ["full"] }
palupunte-domain = { version =  "0.0.1", path = "../domain" }

[dev-dependencies]
env_logger = "0.10.0"
testcontainers = "0.14.0"