[package]
name = "command-domain"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
downcast-rs = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid-generator-rs = { workspace = true, features = ["uuid", "serde"] }
event-store-adapter-rs = "0.2.13"