[package]
name = "command-interface-adaptor-if"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
hyper = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }

[dev-dependencies]
env_logger = "0.10.0"
mime = "0.3.17"
testcontainers = "0.14.0"
