[package]
name = "command-interface-adaptor-if"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
hyper = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
event-store-adapter-rs = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
mime = "0.3.17"
testcontainers = "0.21.0"
