[package]
name = "cqrs-es-example-command-interface-adaptor-impl"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.19"

anyhow = "1.0.71"
chrono = "0.4.26"
async-trait = "0.1.36"
downcast-rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55.1"
aws-sdk-dynamodb = { version = "0.28.0" }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.12"
axum = "0.6.18"
sqlx = { version = "0.6.3", default-features = false, features = ["offline", "macros", "mysql", "chrono", "runtime-tokio-rustls"] }
cqrs-es-example-domain = { version = "0.0.1", path = "../domain" }
cqrs-es-example-command-processor = { version = "0.0.1", path = "../processor" }
cqrs-es-example-command-interface-adaptor-if = { version = "0.0.1", path = "../interface-adaptor-if" }
once_cell = "1.18.0"

[dev-dependencies]
refinery-core = "0.8"
refinery = { version = "0.8", features = ["mysql"] }
env_logger = "0.10.0"
testcontainers = "0.14.0"
mime = "0.3.16"
