[package]
name = "command-interface-adaptor-impl"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-interface-adaptor-if = { path = "../interface-adaptor-if" }
command-processor = { path = "../processor" }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["macros", "mysql", "chrono", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.6", features = ["axum"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }
event-store-adapter-rs = "0.2.22"

[dev-dependencies]
env_logger = "0.10.0"
mime = "0.3.17"
refinery = { version = "0.8", features = ["mysql"] }
refinery-core = "0.8"
testcontainers = "0.15.0"
hyper = { workspace = true }
tower = { workspace = true }