[package]
name = "command-interface-adaptor-impl"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-interface-adaptor-if = { path = "../interface-adaptor-if" }
command-processor = { path = "../processor" }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["macros", "mysql", "chrono", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
event-store-adapter-rs ={ workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
mime = "0.3.17"
refinery = { version = "0.8.14", features = ["mysql"] }
refinery-core = "0.8.14"
testcontainers = "0.18.0"
hyper = { workspace = true }
tower = { workspace = true }
serial_test = { workspace = true }