[package]
name = "command-processor"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-interface-adaptor-if = { path = "../interface-adaptor-if" }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
event-store-adapter-rs = "0.2.16"