[package]
name = "query-interface-adaptor"
version = "0.0.1"
edition = "2021"

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
downcast-rs = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "mysql", "chrono", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }

[dev-dependencies]
env_logger = "0.11.3"
refinery = { version = "0.8.14", features = ["mysql"] }
refinery-core = "0.8.14"
testcontainers = "0.16.6"
hyper = { workspace = true }
tower = { workspace = true }
command-domain = { path = "../../command/domain" }
command-interface-adaptor-if = { path = "../../command/interface-adaptor-if" }
command-interface-adaptor-impl = { path = "../../command/interface-adaptor-impl" }
serial_test = { workspace = true }